--- a/meetings/2025-03-24-general.md
+++ b/meetings/2025-03-24-general.md
@@ -13,7 +13,7 @@
 이는 스프린트 1-2 기준으로, 프리 스프린트, 기말고사 기간, 마지막 주는 달라질 수 있음.
 <br>
 이시간부로 진행되는 프로젝트 관련 모든 실제 작업 시간이 10분 단위로 프리 스프린트를 포함하여 기록될 것임.
-- 김지원: (추후 조사 예정)
+- 김지원: 6시간 (혹은 그 이상)
 - 사푸트라: 12시간
 - 오정택: 10시간
 - 윤민: 30시간
@@ -62,7 +62,7 @@
   - 원칙적으로 코드는 PM과 플밍 파트장이 merge할 수 있습니다. 리뷰를 받으세요
 ### 팀원 별 역할 분배
 각 팀원은 5명 모두가 참여해야 하는 프로그래밍 파트 외의 추가 역할을 하나 이상 반드시 분배받아야 함. (프로그래밍 파트장도 추가 역할에 포함됨)
-- 김지원: (추후 조사 예정)
+- 김지원: 게임 디자인, 프로그래밍
 - 사푸트라: UI, 게임 디자인, 프로그래밍
 - 오정택: 게임 디자인, 프로그래밍, 사운드
 - 윤민: PM, UI, VFX/TA, 게임 디자인, 프로그래밍, 사운드
