add(general): 2025-03-31 meeting

--- a/meetings/2025-03-26-general.md
+++ b/meetings/2025-03-26-general.md
@@ -21,7 +21,7 @@
   - 우선순위와 중요도를 labeling할 수 있다
   - 각 일감을 진행 단계와 기능 별로 분류하여 관리
   - 검색해 보거나 해당 링크를 참고하여 칸반 워크플로우를 익힐 것
-- 초대 링크 (https://trello.com/invite/b/67d1142654951c2c2e60815a/ATTI48812ac8b38b47bb2595e49db1eea1fdB0F28EA3/2025-swpp)
+- 초대 링크 (Slack 채널에 공유)
 - Workflow를 참고하여 Template으로 신규 일감 카드를 Waitlist 보드에 추가
 - 이후 진행도에 따라 다루기. 완료된 일감은 Done에 추가
 - 주기적으로 workspace를 export하여 기록 예정
@@ -59,7 +59,7 @@
 ### 피드백
 (없음)
 ## 다음 회의 일정
-다음 회의(03-31 대략 20:00 이후)에서는 2차 아이디에이션을 진행함. 그리고 WBS 차트 공유, 프리 스프린트 일감 경매 및 할당, ?을 진행할 예정임.
+다음 회의(03-31 대략 20:00 이후)에서는 2차 아이디에이션을 진행함. 그리고 WBS 차트 공유, 프리 스프린트 일감 경매 및 할당 외 사항을 진행할 예정임.
 ### 2차 아이디에이션
 - 피드백 반영 결과를 바탕으로 프로젝트 제안 문서에 제출하고 **제작할 게임 확정**
 - 게임과 팀의 성격과 관련 있는 **팀 이름 잠정 확정**
